# renovate-repro-uv-git-rev

./: hello.py  pyproject.toml  renovate.json
