[project]
name = "renovate-repro-uv-git-rev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cowsay", "yt-dlp"]

[tool.uv.sources]
cowsay = { git = "https://github.com/VaasuDevanS/cowsay-python.git", tag = "v6.0" }
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp.git", rev = "f4338714241b11d9d43768ae71a25f5e952f677d" }
