[project]
name = "renovate-repro-uv-git-rev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["cowsay", "yt-dlp"]

[tool.uv.sources]
cowsay = { git = "https://github.com/VaasuDevanS/cowsay-python.git", tag = "v6.0" }
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp.git", rev = "fbc66e3ab35743cc847a21223c67d88bb463cd9c" }
